# tree-serialization

./: CMakeLists.txt  Doxyfile  LICENSE  Node.h  NodeValue.cpp  NodeValue.h  README.md  main.cpp
tree_serialization_lib/: CMakeLists.txt  Node.cpp  Node.h  NodeError.h  NodeValue.cpp  NodeValue.h  README.md  Tree.cpp  Tree.h  TreeUtil.cpp  TreeUtil.h  TreeUtil.h___jb_old___  Util.cpp  Util.h
tree_serialization_lib/tests/: CMakeLists.txt  Node.t.cpp  NodeValue.t.cpp  Tree.t.cpp  TreeUtil.t.cpp  Util.t.cpp
